kube_menifest/00-MySQL-externalName-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ExternalName
  externalName: db.cljipart8mux.us-east-1.rds.amazonaws.com
