kube_menifest/03-nginx-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: library-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
      - http:
         paths:
            - backend:
                serviceName: books-service
                servicePort: 80
              path: /books(/|$)(.*)
            - backend:
                serviceName: authors-service
                servicePort: 80
              path: /authors
